--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "axios": "^1.7.7",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
+    "react-loading": "^2.0.3",
+    "react-loading-indicators": "^1.0.0",
     "sass": "^1.81.0"
   },
   "devDependencies": {
