--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@tanstack/react-query": "^5.62.3",
     "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "next": "15.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
     "react-loading": "^2.0.3",
     "react-loading-indicators": "^1.0.0",
-    "sass": "^1.81.0"
+    "sass": "^1.83.0"
   },
   "devDependencies": {
     "@types/node": "^20",
